--- a/slides/learner-empowerment.html
+++ b/slides/learner-empowerment.html
@@ -5,30 +5,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Webslides Template</title>
-  <meta name="description" content="">
+  <title>Envisioning Content, YOYO, Assessments, & Facilitation</title>
+  <meta name="description" content="Investing in communities of talent">
 
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext"
     rel="stylesheet">
 
-  <!-- CSS Base -->
-  <link rel="stylesheet" type='text/css' media='all' href="../lib/webslides/static/css/webslides.css">
+ <!-- CSS Base -->
+ <link rel="stylesheet" type='text/css' media='all' href="../lib/webslides/static/css/webslides.css">
 
-  <!-- Optional - CSS SVG Icons (Font Awesome) -->
-  <link rel="stylesheet" type="text/css" media="all" href="../lib/webslides/static/css/svg-icons.css">
+ <!-- Optional - CSS SVG Icons (Font Awesome) -->
+ <link rel="stylesheet" type="text/css" media="all" href="../lib/webslides/static/css/svg-icons.css">
 
-  <link rel="stylesheet" type="text/css" media="all" href="static/css/andela.css">
+ <link rel="stylesheet" type="text/css" media="all" href="static/css/andela.css">
 
-  <!-- FAVICONS -->
-  <link rel="shortcut icon" sizes="16x16" href="../lib/webslides/static/images/favicons/favicon.png">
-  <link rel="shortcut icon" sizes="32x32" href="../lib/webslides/static/images/favicons/favicon-32.png">
-  <link rel="apple-touch-icon icon" sizes="76x76" href="../lib/webslides/static/images/favicons/favicon-76.png">
-  <link rel="apple-touch-icon icon" sizes="120x120" href="../lib/webslides/static/images/favicons/favicon-120.png">
-  <link rel="apple-touch-icon icon" sizes="152x152" href="../lib/webslides/static/images/favicons/favicon-152.png">
-  <link rel="apple-touch-icon icon" sizes="180x180" href="../lib/webslides/static/images/favicons/favicon-180.png">
-  <link rel="apple-touch-icon icon" sizes="192x192" href="../lib/webslides/static/images/favicons/favicon-192.png">
+ <!-- FAVICONS -->
+ <link rel="shortcut icon" sizes="16x16" href="../lib/webslides/static/images/favicons/favicon.png">
+ <link rel="shortcut icon" sizes="32x32" href="../lib/webslides/static/images/favicons/favicon-32.png">
+ <link rel="apple-touch-icon icon" sizes="76x76" href="../lib/webslides/static/images/favicons/favicon-76.png">
+ <link rel="apple-touch-icon icon" sizes="120x120" href="../lib/webslides/static/images/favicons/favicon-120.png">
+ <link rel="apple-touch-icon icon" sizes="152x152" href="../lib/webslides/static/images/favicons/favicon-152.png">
+ <link rel="apple-touch-icon icon" sizes="180x180" href="../lib/webslides/static/images/favicons/favicon-180.png">
+ <link rel="apple-touch-icon icon" sizes="192x192" href="../lib/webslides/static/images/favicons/favicon-192.png">
 
   <!-- Android -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -39,15 +39,15 @@
   <header role="banner">
     <nav role="navigation">
       <p class="logo">
-        <a href="www.andela.com" title="Andela">Andela</a>
+        <a href="https://andela.com/" title="Andela">Andela</a>
       </p>
       <ul>
         <li class="github">
-          <a rel="external" href="https://github.com/charlesodili/webslides" title="Github">
-            <svg class="fa-github">
-              <use xlink:href="#fa-github"></use>
+          <a rel="external" href="#" title="Slack">
+            <svg class="fa-slack">
+              <use xlink:href="#fa-slack"></use>
             </svg>
-            <em>Github</em>
+            <em>Slack</em>
           </a>
         </li>
       </ul>
@@ -56,10 +56,20 @@
 
   <main role="main">
     <article id="webslides">
-
-      <!-- Slide 1 -->
-      <section>
-        <h1>Re-envisioning Learner Empowerment</h1>
+      
+      <section class="bg-black">
+        <span class="background" style="background-image:url('https://source.unsplash.com/E695OZJiju4/1600x800')"></span>
+        <div class="wrap">
+          <p class="text-subtitle">Re-envisioning</p>
+          <h1>
+            <strong class="text-facebook">Learner Empowerment</strong>
+          </h1>
+          <p>pushing the limits of how we invest in tomorrows leaders ...</p>
+          <p>
+            <img class="avatar-40" src="static/images/chalu.jpeg" alt="Avatar Odili Charles">
+            By Odili Charles | April, 2018
+          </p>
+        </div>
       </section>
 
     </article>
